// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migration.migrate creates the index and alias if it does not exist 1`] = `
Object {
  "data": Object {
    ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "hoi",
                "mappings": "{\\"stuff\\":{\\"type\\":\\"integer\\"}}",
                "mappingsChecksum": "a2b8b8ab8c524ee1bd50dd9d4ec481a67e034491",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".mufasa": Object {
        ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
          "aliases": Object {
            ".mufasa": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "stuff": Object {
              "type": "integer",
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "stuff": Object {
              "type": "integer",
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate data and mappings for disabled plugins is retained 1`] = `
Object {
  "data": Object {
    "disabled-scenario-1": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "quotes",
                "mappings": "{\\"quote\\":{\\"properties\\":{\\"text\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "f2deb89810821e0e854a94b144159f896b992341",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
              Object {
                "id": "tweets",
                "mappings": "{\\"tweet\\":{\\"properties\\":{\\"chars\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "dfc3c70042e0bfcb9d5d586d48b88f5ab0e4a29b",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": undefined,
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 43,
      },
      "quote:q1": Object {
        "_source": Object {
          "quote": Object {
            "text": "It's a dangerous business going out your front door.",
          },
          "type": "quote",
        },
      },
      "tweet:t1": Object {
        "_source": Object {
          "tweet": Object {
            "chars": "The past is not what it was.",
          },
          "type": "tweet",
        },
      },
    },
    "disabled-scenario-9.8.7-b7c6da6bcfa6ce52478d06df60aaac893dcbf31f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "tweets",
                "mappings": "{\\"tweet\\":{\\"properties\\":{\\"chars\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "dfc3c70042e0bfcb9d5d586d48b88f5ab0e4a29b",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
              Object {
                "id": "quotes",
                "mappings": "{\\"quote\\":{\\"properties\\":{\\"text\\":{\\"type\\":\\"text\\"},\\"author\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "32bda98830c7014796e40c32edcc9338b7564453",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": "disabled-scenario-1",
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "quote:q1": Object {
        "_source": Object {
          "quote": Object {
            "text": "It's a dangerous business going out your front door.",
          },
          "type": "quote",
          "updated_at": undefined,
        },
      },
      "tweet:t1": Object {
        "_source": Object {
          "tweet": Object {
            "chars": "The past is not what it was.",
          },
          "type": "tweet",
          "updated_at": undefined,
        },
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      "disabled-scenario": Object {
        "disabled-scenario-9.8.7-b7c6da6bcfa6ce52478d06df60aaac893dcbf31f": Object {
          "aliases": Object {
            "disabled-scenario": Object {},
          },
        },
      },
    },
    "mappings": Object {
      "disabled-scenario-1": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "quote": Object {
              "properties": Object {
                "text": Object {
                  "type": "text",
                },
              },
            },
            "tweet": Object {
              "properties": Object {
                "chars": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      "disabled-scenario-9.8.7-b7c6da6bcfa6ce52478d06df60aaac893dcbf31f": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "quote": Object {
              "properties": Object {
                "author": Object {
                  "type": "keyword",
                },
                "text": Object {
                  "type": "text",
                },
              },
            },
            "tweet": Object {
              "properties": Object {
                "chars": Object {
                  "type": "text",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      "disabled-scenario-1": Object {
        "index": Object {
          "blocks.read_only": false,
        },
      },
      "disabled-scenario-9.8.7-b7c6da6bcfa6ce52478d06df60aaac893dcbf31f": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate does nothing if there are no migrations defined 1`] = `
Object {
  "data": Object {},
  "meta": Object {
    "aliases": Object {},
    "mappings": Object {},
    "settings": Object {},
  },
}
`;

exports[`Migration.migrate existing docs are migrated 1`] = `
Object {
  "data": Object {
    "gentleman-9.8.7-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
      "baz:fred": Object {
        "_source": Object {
          "baz": Object {
            "bar": "bing",
          },
          "type": "baz",
          "updated_at": undefined,
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "hoi",
                "mappings": "{\\"baz\\":{\\"properties\\":{\\"bar\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "9d395eb475bfad4d2a8bc2524ab260bb13c932ed",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    "gentleman-original-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
      "baz:fred": Object {
        "_source": Object {
          "baz": Object {
            "bar": "bing",
          },
          "type": "baz",
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      "gentleman": Object {
        "gentleman-9.8.7-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
          "aliases": Object {
            "gentleman": Object {},
          },
        },
      },
    },
    "mappings": Object {
      "gentleman-9.8.7-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "baz": Object {
              "properties": Object {
                "bar": Object {
                  "type": "keyword",
                },
              },
            },
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      "gentleman-original-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
        "doc": Object {
          "properties": Object {
            "baz": Object {
              "properties": Object {
                "bar": Object {
                  "type": "keyword",
                },
              },
            },
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      "gentleman-9.8.7-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      "gentleman-original-66b870191326b7ea306bc06a7992b5380f97cc83": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate existing docs are transformed 1`] = `
Object {
  "data": Object {
    "groovystuff-9.8.7-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "users",
                "mappings": "{\\"user\\":{\\"properties\\":{\\"name\\":{\\"type\\":\\"keyword\\"},\\"country\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "c46727b1349b57b903e4f6debda29d1f377d98b7",
                "migrationIds": Array [
                  "ensure_country",
                ],
                "migrationsChecksum": "17605a0182fa119f6acd7739cc1f967f4725a9e7",
              },
              Object {
                "id": "preferences",
                "mappings": "{\\"preference\\":{\\"properties\\":{\\"resultSize\\":{\\"type\\":\\"integer\\"},\\"color\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "03df4121c2e775ab551beb90c3f3a196e2b61bda",
                "migrationIds": Array [
                  "default_pref",
                ],
                "migrationsChecksum": "67d77399db16823739150691b6102b31d5c77d8e",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "preference:default_pref": Object {
        "_source": Object {
          "preference": Object {
            "color": "steelblue",
            "resultSize": 10,
          },
          "type": "preference",
          "updated_at": undefined,
        },
      },
      "preference:p1": Object {
        "_source": Object {
          "preference": Object {
            "color": "blue",
            "resultSize": 1,
          },
          "type": "preference",
          "updated_at": undefined,
        },
      },
      "user:u1": Object {
        "_source": Object {
          "type": "user",
          "updated_at": undefined,
          "user": Object {
            "country": "N/A",
            "name": "jimmy fallon",
          },
        },
      },
      "user:u2": Object {
        "_source": Object {
          "type": "user",
          "updated_at": undefined,
          "user": Object {
            "country": "N/A",
            "name": "bono",
          },
        },
      },
    },
    "groovystuff-original-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "preference:p1": Object {
        "_source": Object {
          "preference": Object {
            "color": "blue",
            "resultSize": 1,
          },
          "type": "preference",
        },
      },
      "user:u1": Object {
        "_source": Object {
          "type": "user",
          "user": Object {
            "name": "jimmy fallon",
          },
        },
      },
      "user:u2": Object {
        "_source": Object {
          "type": "user",
          "user": Object {
            "name": "bono",
          },
        },
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      "groovystuff": Object {
        "groovystuff-9.8.7-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
          "aliases": Object {
            "groovystuff": Object {},
          },
        },
      },
    },
    "mappings": Object {
      "groovystuff-9.8.7-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "preference": Object {
              "properties": Object {
                "color": Object {
                  "type": "keyword",
                },
                "resultSize": Object {
                  "type": "integer",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
            "user": Object {
              "properties": Object {
                "country": Object {
                  "type": "keyword",
                },
                "name": Object {
                  "type": "keyword",
                },
              },
            },
          },
        },
      },
      "groovystuff-original-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "preference": Object {
              "properties": Object {
                "color": Object {
                  "type": "keyword",
                },
                "resultSize": Object {
                  "type": "integer",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
            "user": Object {
              "name": Object {
                "type": "keyword",
              },
            },
          },
        },
      },
    },
    "settings": Object {
      "groovystuff-9.8.7-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      "groovystuff-original-5a56b3c37620cf3bc8b3d2c5432a3571feb2980f": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate existing indices are converted to aliases and migrated 1`] = `
Object {
  "data": Object {
    ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "hoi",
                "mappings": "{\\"stuff\\":{\\"type\\":\\"integer\\"}}",
                "mappingsChecksum": "a2b8b8ab8c524ee1bd50dd9d4ec481a67e034491",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".mufasa": Object {
        ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
          "aliases": Object {
            ".mufasa": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "stuff": Object {
              "type": "integer",
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "shut_the_front_door": Object {
              "properties": Object {
                "name": Object {
                  "type": "integer",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".mufasa-9.8.7-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      ".mufasa-original-ef20323548702925730f8572e22a0ed21619cc9c": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate existing previously migrated index only runs new migrations 1`] = `
Object {
  "data": Object {
    "aquatica-9.8.7-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
      "fish:f1": Object {
        "_source": Object {
          "fish": Object {
            "species": "catfish",
          },
          "type": "fish",
          "updated_at": undefined,
        },
      },
      "fish:f2": Object {
        "_source": Object {
          "fish": Object {
            "species": "carp",
          },
          "type": "fish",
          "updated_at": undefined,
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "fishes",
                "mappings": "{\\"fish\\":{\\"properties\\":{\\"species\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "c44cbb34e9a49a64141523438f72c8dc2fb9f773",
                "migrationIds": Array [
                  "something_or_other",
                  "convert_kind_to_species",
                ],
                "migrationsChecksum": "a54ec64d9b3feaf81ea3095662211f1c27fb1f17",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    "aquatica-original-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
      "fish:f1": Object {
        "_source": Object {
          "fish": Object {
            "kind": "catfish",
          },
          "type": "fish",
        },
      },
      "fish:f2": Object {
        "_source": Object {
          "fish": Object {
            "kind": "carp",
          },
          "type": "fish",
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "fishes",
                "mappings": "{\\"fish\\":{\\"properties\\":{\\"kind\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "1e805de2c794baa87241ced0f980e23901996057",
                "migrationIds": Array [
                  "something_or_other",
                ],
                "migrationsChecksum": "46e8aedaf5f7df5d406a3db25e2abc78c612ef13",
              },
            ],
            "previousIndex": undefined,
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 43,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      "aquatica": Object {
        "aquatica-9.8.7-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
          "aliases": Object {
            "aquatica": Object {},
          },
        },
      },
    },
    "mappings": Object {
      "aquatica-9.8.7-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "fish": Object {
              "properties": Object {
                "species": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      "aquatica-original-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "fish": Object {
              "properties": Object {
                "kind": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      "aquatica-9.8.7-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      "aquatica-original-7611c4e7b73014a1ebc37c1d530aac57ad005df6": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate migrations are skipped if migration status is migrating 1`] = `
Object {
  "data": Object {
    "skippy": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "fishes",
                "mappings": "{\\"fish\\":{\\"properties\\":{\\"kind\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "1e805de2c794baa87241ced0f980e23901996057",
                "migrationIds": Array [],
                "migrationsChecksum": "989db2448f309bfdd99b513f37c84b8f5794d2b5",
              },
            ],
            "previousIndex": undefined,
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 42,
      },
    },
  },
  "meta": Object {
    "aliases": Object {},
    "mappings": Object {
      "skippy": Object {
        "doc": Object {
          "properties": Object {
            "fish": Object {
              "properties": Object {
                "kind": Object {
                  "type": "keyword",
                },
              },
            },
          },
        },
      },
    },
    "settings": Object {},
  },
}
`;

exports[`Migration.migrate migrations will run, if forced even if index is in migrating state 1`] = `
Object {
  "data": Object {
    "skippy-9.8.7-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
      "fish:bass": Object {
        "_source": Object {
          "fish": Object {
            "kind": "freshwater",
          },
          "type": "fish",
          "updated_at": undefined,
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "fishes",
                "mappings": "{\\"fish\\":{\\"properties\\":{\\"kind\\":{\\"type\\":\\"keyword\\"}}}}",
                "mappingsChecksum": "1e805de2c794baa87241ced0f980e23901996057",
                "migrationIds": Array [
                  "makeafish",
                ],
                "migrationsChecksum": "4820cce3d2954e10c2fe5cf4d1b19df403b51e43",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    "skippy-original-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 43,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      "skippy": Object {
        "skippy-9.8.7-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
          "aliases": Object {
            "skippy": Object {},
          },
        },
      },
    },
    "mappings": Object {
      "skippy-9.8.7-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "fish": Object {
              "properties": Object {
                "kind": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      "skippy-original-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
        "doc": Object {
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "fish": Object {
              "properties": Object {
                "kind": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      "skippy-9.8.7-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
        "index": Object {
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
      "skippy-original-e5a3a5d45fee54a1e06c91cd86ab07e8c5f3a9cc": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": undefined,
          "number_of_shards": undefined,
        },
      },
    },
  },
}
`;

exports[`Migration.migrate new index gets seeded 1`] = `
Object {
  "data": Object {
    ".mufasa-9.8.7-df9934795ce1f24822920ad398d915201a10ffe3": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "hoi",
                "mappings": "{\\"music\\":{\\"properties\\":{\\"jazz\\":{\\"type\\":\\"blob\\"}}}}",
                "mappingsChecksum": "4dbf5c4db0d4d02d6b9c1c4506f13f81034db580",
                "migrationIds": Array [
                  "jazzhands",
                ],
                "migrationsChecksum": "6c349fa63409939239bfeb893123ebd6dc5ef474",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
      "music:jazzmeup": Object {
        "_source": Object {
          "music": Object {
            "jazz": Object {
              "louis": "Armstrong",
            },
          },
          "type": "music",
          "updated_at": undefined,
        },
      },
    },
    ".mufasa-original-df9934795ce1f24822920ad398d915201a10ffe3": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".mufasa": Object {
        ".mufasa-9.8.7-df9934795ce1f24822920ad398d915201a10ffe3": Object {
          "aliases": Object {
            ".mufasa": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".mufasa-9.8.7-df9934795ce1f24822920ad398d915201a10ffe3": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "music": Object {
              "properties": Object {
                "jazz": Object {
                  "type": "blob",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".mufasa-original-df9934795ce1f24822920ad398d915201a10ffe3": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "music": Object {
              "properties": Object {
                "jazz": Object {
                  "type": "blob",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".mufasa-9.8.7-df9934795ce1f24822920ad398d915201a10ffe3": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".mufasa-original-df9934795ce1f24822920ad398d915201a10ffe3": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;

exports[`Migration.migrate seeds are transformed 1`] = `
Object {
  "data": Object {
    ".music-9.8.7-24807dac952a960402f3e039b380068bc1cf6897": Object {
      "artists:jazzmeup": Object {
        "_source": Object {
          "artists": Object {
            "john": "coltrane",
            "louis": "Armstrong",
          },
          "type": "artists",
          "updated_at": undefined,
        },
      },
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [
              Object {
                "id": "hoi",
                "mappings": "{\\"artists\\":{\\"properties\\":{\\"louis\\":{\\"type\\":\\"text\\"},\\"john\\":{\\"type\\":\\"text\\"}}}}",
                "mappingsChecksum": "ba944b2559de28ce942aab467b9609481427257c",
                "migrationIds": Array [
                  "never_happens",
                  "add_jazzmeup",
                  "enter_coltrane",
                ],
                "migrationsChecksum": "46c6402e887c1d479266848e5c409e4e9f814c8b",
              },
            ],
            "previousIndex": undefined,
            "status": "migrated",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
    ".music-original-24807dac952a960402f3e039b380068bc1cf6897": Object {
      "migration:migration-state": Object {
        "_source": Object {
          "migration": Object {
            "plugins": Array [],
            "status": "migrating",
          },
          "type": "migration",
        },
        "_version": 1,
      },
    },
  },
  "meta": Object {
    "aliases": Object {
      ".music": Object {
        ".music-9.8.7-24807dac952a960402f3e039b380068bc1cf6897": Object {
          "aliases": Object {
            ".music": Object {},
          },
        },
      },
    },
    "mappings": Object {
      ".music-9.8.7-24807dac952a960402f3e039b380068bc1cf6897": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "artists": Object {
              "properties": Object {
                "john": Object {
                  "type": "text",
                },
                "louis": Object {
                  "type": "text",
                },
              },
            },
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
      ".music-original-24807dac952a960402f3e039b380068bc1cf6897": Object {
        "doc": Object {
          "dynamic": "strict",
          "properties": Object {
            "artists": Object {
              "properties": Object {
                "john": Object {
                  "type": "text",
                },
                "louis": Object {
                  "type": "text",
                },
              },
            },
            "config": Object {
              "dynamic": true,
              "properties": Object {
                "buildNum": Object {
                  "type": "keyword",
                },
              },
            },
            "migration": Object {
              "properties": Object {
                "plugins": Object {
                  "properties": Object {
                    "id": Object {
                      "type": "keyword",
                    },
                    "mappings": Object {
                      "type": "text",
                    },
                    "mappingsChecksum": Object {
                      "type": "keyword",
                    },
                    "migrationIds": Object {
                      "type": "keyword",
                    },
                    "migrationsChecksum": Object {
                      "type": "keyword",
                    },
                  },
                  "type": "nested",
                },
                "previousIndex": Object {
                  "type": "keyword",
                },
                "status": Object {
                  "type": "keyword",
                },
              },
            },
            "type": Object {
              "type": "keyword",
            },
            "updated_at": Object {
              "type": "date",
            },
          },
        },
      },
    },
    "settings": Object {
      ".music-9.8.7-24807dac952a960402f3e039b380068bc1cf6897": Object {
        "index": Object {
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
      ".music-original-24807dac952a960402f3e039b380068bc1cf6897": Object {
        "index": Object {
          "blocks.read_only": false,
          "number_of_replicas": "1",
          "number_of_shards": "5",
        },
      },
    },
  },
}
`;
